force-app/main/default/objects/Info2GroupList__c/Info2GroupList__c.object-meta.xml
<CustomObject>
    <description>Oggetto di configurazione per la determinazione dei rate category  legate a quelle dell&apos;oggetto &quot;Lista Group 1&quot; delle tariffe nella funzionalità di configurazione offerta tecnica</description>
    <label>Lista Gruppo Info 2</label>
    <nameField>
        <displayFormat>SIG-{00000000}</displayFormat>
        <label>Lista Gruppo Info 2 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lista Gruppi Info2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>