force-app/main/default/objects/Info2GroupList__c/fields/DetRate__c.field-meta.xml
<CustomField>
    <fullName>DetRate__c</fullName>
    <description>Campo di configurazione usato per indicare i possibili valori di tipologie di Tariffe legati all&apos;oggetto &quot;FareTypeList&quot; nella funzionalità di Configurazione Offerta Tecnica</description>
    <label>Det Tariffa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>