force-app/main/default/objects/Info2GroupList__c/fields/PossibleValue__c.field-meta.xml
<CustomField>
    <fullName>PossibleValue__c</fullName>
    <description>Campo di configurazione usato per indicare i possibili valori di rate category delle Tariffe legati all&apos;oggetto &quot;FareTypeList&quot; nella funzionalità di Configurazione Offerta Tecnica</description>
    <label>Valore Possibile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>