force-app/main/default/objects/Info2GroupList__c/fields/ValueDescription__c.field-meta.xml
<CustomField>
    <fullName>ValueDescription__c</fullName>
    <description>Campo di configurazione usato per indicare i possibili valori di Tariffe usati per determinare i valori del campo  &quot;Tariffa&quot; dell&apos;oggetto &quot;Info2GroupList&quot; nella funzionalità di Configurazione Offerta Tecnica</description>
    <label>Descrizione Valore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>